[gd_scene load_steps=24 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Controller.gd" type="Script" id=2]
[ext_resource path="res://cueStickTransparent.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/testPoolRoom/testPoolRoom.fbx" type="PackedScene" id=4]
[ext_resource path="res://assets/Oculus Touch for Quest 2/right_joy.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/Oculus Touch for Quest 2/left_joy.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/cueStick/cueStick.fbx" type="PackedScene" id=7]
[ext_resource path="res://assets/8ball/8Ball.fbx" type="PackedScene" id=8]
[ext_resource path="res://resources/ballPhysics.tres" type="PhysicsMaterial" id=9]
[ext_resource path="res://resources/tableWood.tres" type="Material" id=10]

[sub_resource type="CylinderShape" id=1]
radius = 0.0109022
height = 1.54559

[sub_resource type="CylinderShape" id=2]
radius = 0.0184151
height = 0.369625

[sub_resource type="ProceduralSky" id=6]

[sub_resource type="Environment" id=7]
background_mode = 2
background_sky = SubResource( 6 )
background_color = Color( 1, 1, 1, 1 )

[sub_resource type="PhysicsMaterial" id=8]
rough = true
absorbent = true

[sub_resource type="BoxShape" id=9]
extents = Vector3( 1.24365, 0.0650294, 0.649149 )

[sub_resource type="SpatialMaterial" id=10]
albedo_color = Color( 0.145098, 0.4, 0.0313726, 1 )

[sub_resource type="PhysicsMaterial" id=11]
bounce = 0.3

[sub_resource type="BoxShape" id=12]
extents = Vector3( 0.0234814, 0.0506137, 0.546811 )

[sub_resource type="BoxShape" id=13]
extents = Vector3( 0.0234814, 0.0506137, 0.527178 )

[sub_resource type="VisualShader" id=3]
code = "shader_type spatial;
render_mode specular_schlick_ggx;




void vertex() {
// Output:0

}

void fragment() {
// Output:0

}

void light() {
// Output:0

}
"
graph_offset = Vector2( 35, 60 )

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )

[sub_resource type="SphereShape" id=5]
radius = 0.0399023

[node name="Game" type="Spatial"]
script = ExtResource( 1 )
debug = true

[node name="Camera" type="Camera" parent="."]
transform = Transform( -0.947996, -0.250225, 0.196701, -0.00161672, 0.621785, 0.783186, -0.318279, 0.742139, -0.589854, 0.900267, 2.88716, -1.1572 )
projection = 1
size = 2.36392

[node name="World" type="Spatial" parent="."]
visible = false

[node name="testPoolRoom" parent="World" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.10356, 0.0265717, 0.0262829 )

[node name="VRPlayer" type="ARVROrigin" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.229113, -0.473156 )

[node name="VRCamera" type="ARVRCamera" parent="VRPlayer"]

[node name="LeftController" type="ARVRController" parent="VRPlayer"]
visible = false
script = ExtResource( 2 )

[node name="leftJoy" parent="VRPlayer/LeftController" instance=ExtResource( 6 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="RightController" type="ARVRController" parent="VRPlayer"]
controller_id = 2
script = ExtResource( 2 )

[node name="rightJoy" parent="VRPlayer/RightController" instance=ExtResource( 5 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
visible = false

[node name="CueStickModel" parent="VRPlayer/RightController" instance=ExtResource( 7 )]
transform = Transform( 0.878237, -0.184714, 0.441113, -0.216965, 0.668105, 0.711731, -0.426177, -0.720775, 0.546678, 0.287943, -1.02112, 1.15157 )

[node name="hitterPosition" type="CSGCylinder" parent="VRPlayer/RightController"]
transform = Transform( 0.949916, -0.185489, 0.251503, -0.0668408, 0.665576, 0.743331, -0.305274, -0.722913, 0.619843, 0.0372834, -0.0674395, 0.129184 )
visible = false
radius = 0.0133578
height = 0.368617
sides = 19

[node name="CueStickModelTransparent" parent="VRPlayer/RightController" instance=ExtResource( 3 )]
transform = Transform( 0.878237, -0.184714, 0.441113, -0.216964, 0.668105, 0.711732, -0.426177, -0.720775, 0.546678, 0.288, -1.021, 1.152 )
visible = false

[node name="Area" type="Area" parent="VRPlayer/RightController"]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape" type="CollisionShape" parent="VRPlayer/RightController/Area"]
transform = Transform( 0.96503, -0.192544, 0.177886, -0.00519256, 0.664422, 0.74734, -0.262087, -0.722129, 0.640187, 0.147147, -0.483706, 0.572933 )
shape = SubResource( 1 )

[node name="CueStick" type="RigidBody" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.229113, -2.01364 )
visible = false
collision_layer = 4
collision_mask = 2
custom_integrator = true
contacts_reported = 1
contact_monitor = true

[node name="CollisionShape" type="CollisionShape" parent="CueStick"]
shape = SubResource( 2 )

[node name="model" parent="CueStick" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.40991, 0 )

[node name="CueStick2" type="RigidBody" parent="."]
transform = Transform( -0.00248432, 0.988483, 0.151313, 0.000380198, -0.151312, 0.988486, 0.999997, 0.00251324, 8.75324e-08, -0.945926, 1.10057, 0.000262901 )
collision_layer = 4
collision_mask = 2
custom_integrator = true
contacts_reported = 1
contact_monitor = true

[node name="CollisionShape" type="CollisionShape" parent="CueStick2"]
shape = SubResource( 2 )

[node name="model" parent="CueStick2" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.40991, 0 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 7 )

[node name="PoolTable" type="Spatial" parent="."]

[node name="PoolTableMat" type="StaticBody" parent="PoolTable"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.124, 0 )
collision_mask = 3
physics_material_override = SubResource( 8 )

[node name="CollisionShape" type="CollisionShape" parent="PoolTable/PoolTableMat"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.102253, 1.01203, 0 )
shape = SubResource( 9 )

[node name="CSGBox" type="CSGBox" parent="PoolTable/PoolTableMat/CollisionShape"]
width = 2.46891
height = 0.130059
depth = 1.2839
material = SubResource( 10 )

[node name="PoolTableBorders" type="StaticBody" parent="PoolTable"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00609207, 0 )
physics_material_override = SubResource( 11 )

[node name="left" type="CollisionShape" parent="PoolTable/PoolTableBorders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.136, 0.99, 0 )
shape = SubResource( 12 )

[node name="CSGBox" type="CSGBox" parent="PoolTable/PoolTableBorders/left"]
width = 0.0427496
height = 0.0993773
depth = 1.09355
material = ExtResource( 10 )

[node name="right" type="CollisionShape" parent="PoolTable/PoolTableBorders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.34, 0.99, 0 )
shape = SubResource( 12 )

[node name="CSGBox" type="CSGBox" parent="PoolTable/PoolTableBorders/right"]
width = 0.0427496
height = 0.0993773
depth = 1.094
material = ExtResource( 10 )

[node name="up" type="CollisionShape" parent="PoolTable/PoolTableBorders"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.499, 0.99, -0.657 )
shape = SubResource( 13 )

[node name="CSGBox" type="CSGBox" parent="PoolTable/PoolTableBorders/up"]
width = 0.0427496
height = 0.0993773
depth = 1.05537
material = ExtResource( 10 )

[node name="down" type="CollisionShape" parent="PoolTable/PoolTableBorders"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.499, 0.99, 0.657 )
shape = SubResource( 13 )

[node name="CSGBox" type="CSGBox" parent="PoolTable/PoolTableBorders/down"]
width = 0.0427496
height = 0.0993773
depth = 1.055
material = ExtResource( 10 )

[node name="up2" type="CollisionShape" parent="PoolTable/PoolTableBorders"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.717, 0.99, -0.657 )
shape = SubResource( 13 )

[node name="CSGBox" type="CSGBox" parent="PoolTable/PoolTableBorders/up2"]
width = 0.0427496
height = 0.0993773
depth = 1.05537
material = ExtResource( 10 )

[node name="down2" type="CollisionShape" parent="PoolTable/PoolTableBorders"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.717, 0.99, 0.657 )
shape = SubResource( 13 )

[node name="CSGBox" type="CSGBox" parent="PoolTable/PoolTableBorders/down2"]
width = 0.0427496
height = 0.0993773
depth = 1.055
material = ExtResource( 10 )

[node name="Balls" type="Spatial" parent="."]

[node name="WhiteBall" type="RigidBody" parent="Balls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.657995, 1.0618, 0.00813487 )
collision_layer = 2
collision_mask = 7
mass = 0.8
physics_material_override = ExtResource( 9 )
continuous_cd = true
linear_damp = 1.3
angular_damp = 1.0

[node name="CueBall" type="CSGSphere" parent="Balls/WhiteBall"]
radius = 0.04054
material = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="Balls/WhiteBall"]
shape = SubResource( 5 )

[node name="Ball" type="RigidBody" parent="Balls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.868005, 1.06883, -0.08324 )
collision_mask = 3
mass = 0.8
physics_material_override = ExtResource( 9 )
continuous_cd = true
linear_damp = 1.3
angular_damp = 1.0

[node name="8Ball" parent="Balls/Ball" instance=ExtResource( 8 )]

[node name="CollisionShape" type="CollisionShape" parent="Balls/Ball"]
shape = SubResource( 5 )

[node name="Ball2" type="RigidBody" parent="Balls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.869724, 1.06883, 0.000345156 )
collision_mask = 3
mass = 0.8
physics_material_override = ExtResource( 9 )
continuous_cd = true
linear_damp = 1.3
angular_damp = 1.0

[node name="8Ball" parent="Balls/Ball2" instance=ExtResource( 8 )]

[node name="CollisionShape" type="CollisionShape" parent="Balls/Ball2"]
shape = SubResource( 5 )

[node name="Ball3" type="RigidBody" parent="Balls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.869023, 1.06883, 0.0832871 )
collision_mask = 3
mass = 0.8
physics_material_override = ExtResource( 9 )
continuous_cd = true
linear_damp = 1.3
angular_damp = 1.0

[node name="8Ball" parent="Balls/Ball3" instance=ExtResource( 8 )]

[node name="CollisionShape" type="CollisionShape" parent="Balls/Ball3"]
shape = SubResource( 5 )

[node name="Ball4" type="RigidBody" parent="Balls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.869724, 1.06883, 0.168334 )
collision_mask = 3
mass = 0.8
physics_material_override = ExtResource( 9 )
continuous_cd = true
linear_damp = 1.3
angular_damp = 1.0

[node name="8Ball" parent="Balls/Ball4" instance=ExtResource( 8 )]

[node name="CollisionShape" type="CollisionShape" parent="Balls/Ball4"]
shape = SubResource( 5 )

[node name="Ball5" type="RigidBody" parent="Balls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.795607, 1.06883, -0.0436341 )
collision_mask = 3
mass = 0.8
physics_material_override = ExtResource( 9 )
continuous_cd = true
linear_damp = 1.3
angular_damp = 1.0

[node name="8Ball" parent="Balls/Ball5" instance=ExtResource( 8 )]

[node name="CollisionShape" type="CollisionShape" parent="Balls/Ball5"]
shape = SubResource( 5 )

[node name="Ball6" type="RigidBody" parent="Balls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.794606, 1.06883, 0.0392039 )
collision_mask = 3
mass = 0.8
physics_material_override = ExtResource( 9 )
continuous_cd = true
linear_damp = 1.3
angular_damp = 1.0

[node name="8Ball" parent="Balls/Ball6" instance=ExtResource( 8 )]

[node name="CollisionShape" type="CollisionShape" parent="Balls/Ball6"]
shape = SubResource( 5 )

[node name="Ball7" type="RigidBody" parent="Balls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.794307, 1.06883, 0.126655 )
collision_mask = 3
mass = 0.8
physics_material_override = ExtResource( 9 )
continuous_cd = true
linear_damp = 1.3
angular_damp = 1.0

[node name="8Ball" parent="Balls/Ball7" instance=ExtResource( 8 )]

[node name="CollisionShape" type="CollisionShape" parent="Balls/Ball7"]
shape = SubResource( 5 )

[node name="Ball8" type="RigidBody" parent="Balls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.718877, 1.06883, -0.00456738 )
collision_mask = 3
mass = 0.8
physics_material_override = ExtResource( 9 )
continuous_cd = true
linear_damp = 1.3
angular_damp = 1.0

[node name="8Ball" parent="Balls/Ball8" instance=ExtResource( 8 )]

[node name="CollisionShape" type="CollisionShape" parent="Balls/Ball8"]
shape = SubResource( 5 )

[node name="Ball9" type="RigidBody" parent="Balls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.720683, 1.06883, 0.0793752 )
collision_mask = 3
mass = 0.8
physics_material_override = ExtResource( 9 )
continuous_cd = true
linear_damp = 1.3
angular_damp = 1.0

[node name="8Ball" parent="Balls/Ball9" instance=ExtResource( 8 )]

[node name="CollisionShape" type="CollisionShape" parent="Balls/Ball9"]
shape = SubResource( 5 )

[node name="Ball10" type="RigidBody" parent="Balls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.64346, 1.06883, 0.0395157 )
collision_mask = 3
mass = 0.8
physics_material_override = ExtResource( 9 )
continuous_cd = true
linear_damp = 1.3
angular_damp = 1.0

[node name="8Ball" parent="Balls/Ball10" instance=ExtResource( 8 )]

[node name="CollisionShape" type="CollisionShape" parent="Balls/Ball10"]
shape = SubResource( 5 )

[node name="Ball11" type="RigidBody" parent="Balls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.874844, 1.06883, -0.173765 )
collision_mask = 3
mass = 0.8
physics_material_override = ExtResource( 9 )
continuous_cd = true
linear_damp = 1.3
angular_damp = 1.0

[node name="8Ball" parent="Balls/Ball11" instance=ExtResource( 8 )]

[node name="CollisionShape" type="CollisionShape" parent="Balls/Ball11"]
shape = SubResource( 5 )

[node name="Ball12" type="RigidBody" parent="Balls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.795308, 1.06883, -0.13119 )
collision_mask = 3
mass = 0.8
physics_material_override = ExtResource( 9 )
continuous_cd = true
linear_damp = 1.3
angular_damp = 1.0

[node name="8Ball" parent="Balls/Ball12" instance=ExtResource( 8 )]

[node name="CollisionShape" type="CollisionShape" parent="Balls/Ball12"]
shape = SubResource( 5 )

[node name="Ball13" type="RigidBody" parent="Balls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.717174, 1.06883, -0.0909144 )
collision_mask = 3
mass = 0.8
physics_material_override = ExtResource( 9 )
continuous_cd = true
linear_damp = 1.3
angular_damp = 1.0

[node name="8Ball" parent="Balls/Ball13" instance=ExtResource( 8 )]

[node name="CollisionShape" type="CollisionShape" parent="Balls/Ball13"]
shape = SubResource( 5 )

[node name="Ball14" type="RigidBody" parent="Balls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.642862, 1.06883, -0.0444269 )
collision_mask = 3
mass = 0.8
physics_material_override = ExtResource( 9 )
continuous_cd = true
linear_damp = 1.3
angular_damp = 1.0

[node name="8Ball" parent="Balls/Ball14" instance=ExtResource( 8 )]

[node name="CollisionShape" type="CollisionShape" parent="Balls/Ball14"]
shape = SubResource( 5 )

[node name="Ball15" type="RigidBody" parent="Balls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.567873, 1.06883, -0.00246201 )
collision_mask = 3
mass = 0.8
physics_material_override = ExtResource( 9 )
continuous_cd = true
linear_damp = 1.3
angular_damp = 1.0

[node name="8Ball" parent="Balls/Ball15" instance=ExtResource( 8 )]

[node name="CollisionShape" type="CollisionShape" parent="Balls/Ball15"]
shape = SubResource( 5 )

[connection signal="body_entered" from="CueStick" to="." method="_on_CueStick_body_entered"]
[connection signal="body_entered" from="CueStick2" to="." method="_on_CueStick_body_entered"]
